Fixing tab spacing
git-svn-id: https://plugins.svn.wordpress.org/templ33t/branches/01_db_config@415180 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/templ33t.css
+++ b/templ33t.css
@@ -78,7 +78,7 @@ div#templ33t_control ul {
 	white-space: nowrap;
 	margin: 0px;
 	padding: 0px;
-	width: 100%;
+	width: auto;
 }
 
 div#templ33t_control ul li {
